[tool.poetry]
name = "beancount-auto-import"
version = "0.1.1"
description = ""
authors = ["Josua Kehlenbach <dev@josuakehlenbach.eu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
beancount = "^3.0.0"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
